<resources>
    <string name="app_name">AddressBook</string>

    <string name="add_contacts_str">Add Contacts</string>
    <string name="search_contacts_str">Search Contacts</string>
    <string name="show_contacts_str">Show All</string>

    <string name="add_contacts_tab">AddressBook: Add Contacts</string>
    <string name="search_contacts_tab">AddressBook: Search Contacts</string>
    <string name="show_contacts_tab">AddressBook: Show All</string>
    <string name="results_tab">AddressBook: Search Results</string>


    <string name="add_btn_str">Add</string>
    <string name="back_btn_str">Back</string>
    <string name="search_btn_str">Search</string>

    <string name="first_name_str">First Name: </string>
    <string name="last_name_str">Last Name: </string>
    <string name="email_str">Email: </string>
    <string name="phone_number_str">Phone Number: </string>

</resources>
